# ratatui-cheese

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  bacon.toml  justfile  project-manifest.yaml
.agents/skills/ratatui-cheese-review/: SKILL.md
.agents/skills/ratatui-cheese-review/agents/: openai.yaml
.claude/skills/create-widget/: SKILL.md
.claude/skills/create-widget/references/: showcase-integration.md  widget-patterns.md  widget-readme.md  widget-tests.md
.claude/skills/release/: SKILL.md
.github/workflows/: ci.yml  release.yml
crates/cheese-core/: Cargo.toml
crates/cheese-showcase/: Cargo.toml
crates/cheese-showcase/src/: main.rs
crates/cheese-spinner/: Cargo.toml  README.md
crates/cheese-spinner/src/: lib.rs
crates/ratatui-cheese/: Cargo.toml  README.md
crates/ratatui-cheese/examples/: fieldset.rs  help.rs  input.rs  list.rs  multi_select.rs  paginator.rs  palette.rs  select.rs  spinners.rs  tree.rs
crates/ratatui-cheese/src/: field.rs  fieldset.rs  help.rs  input.rs  lib.rs  list.rs  multi_select.rs  paginator.rs  select.rs  spinner.rs  theme.rs  tree.rs  utils.rs
crates/showcase/: Cargo.toml
crates/showcase/src/: app.rs  main.rs
crates/showcase/src/widgets/: fieldset.rs  help.rs  input.rs  list.rs  mod.rs  multi_select.rs  paginator.rs  palette.rs  select.rs  spinner.rs  tree.rs
docs/decisions/: 001-tick-dt-api.md
docs/plans/forms/: confirm.md  multi_select.md  note.md  select.md  textarea.md
docs/superpowers/specs/: 2026-03-26-list-widget-design.md  2026-03-30-fieldset-widget-design.md
tools/scripts/: update-reference-repos.nu
tools/scripts/lib/: ui.nu
tools/vhs/: fieldset.tape  help.tape  input.tape  list.tape  multi_select.tape  paginator.tape  select.tape  spinners.tape  tree.tape
