[workspace]
resolver = "3"
members = ["crates/cheese-core", "crates/cheese-showcase", "crates/cheese-spinner"]

[workspace.package]
edition = "2024"
authors = ["Shashank Tomar <https://github.com/shashanktomar>"]
license = "MIT"

[workspace.dependencies]
ratatui = "0.30"
crossterm = "0.29"
cheese-core = { path = "crates/cheese-core" }
cheese-spinner = { path = "crates/cheese-spinner" }
