[workspace]
resolver = "3"
members = ["crates/ratatui-cheese", "crates/showcase"]

[workspace.package]
edition = "2024"
authors = ["Shashank Tomar <https://github.com/shashanktomar>"]
license = "MIT"

[workspace.dependencies]
ratatui = "0.30"
crossterm = "0.29"
ratatui-cheese = { path = "crates/ratatui-cheese" }
