[package]
name = "ratatui-cheese"
version = "0.4.0"
description = "Bubbletea-inspired widgets for Ratatui"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
crossterm = { workspace = true }
ratatui = { workspace = true }
unicode-width = "0.2.2"

[dev-dependencies]
crossterm = { workspace = true }
