[package]
name = "showcase"
version = "0.0.0"
description = "TUI showcase app for ratatui-cheese widgets"

authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ratatui-cheese = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
